--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+  
 }
 
 .App-header {
@@ -35,4 +36,20 @@
   to {
     transform: rotate(360deg);
   }
+}
+.arrowIcon{
+  position: absolute; 
+    right: 30px;
+    top: 40%;
+}
+.card{
+  margin-bottom: 25px;
+}
+@media (min-width: 768px){
+  .container{
+    max-width: 100% !important;
+  }
+}
+.modal-content{
+  background-color: rgb(235, 230, 230) !important;
 }
