--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,9 @@
 .modal-content{
   background-color: rgb(235, 230, 230) !important;
 }
+.card.selected {
+  border: 2px solid blue;
+}
+.card{
+  cursor: pointer;
+}
